Tue Apr  1 17:29:35 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/config_files.rb (ConfigFiles.download): show failed URI.
	  [ruby-core:61792] [Bug #9690]

Tue Apr  1 12:06:49 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (rb_dump_backtrace_with_lines): don't depend hard coded
	  symbol '_start'.

	* addr2line.c (fill_lines): instead of above, get a dynamic symbol
	  in the main executable and use it to know the base address.

	* addr2line.c (follow_debuglink0): use obj_info_t instead of
	  line_info_t to handle object related data.

	* addr2line.c (main_exe_path): defined for Linux.

Tue Apr  1 08:58:39 2014  Kazuki Tsujimoto  <kazuki@callcc.net>

	* parse.y (rb_str_dynamic_intern): set mark bit if dynamic symbol
	  is before sweeping.

Tue Apr  1 07:37:00 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (fill_lines): use dynsym, which is used for dynamic
	  linking and always exists, if there's no symtab.

Tue Apr  1 07:27:15 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_dump.c (rb_print_backtrace): current implementation
	  uses dladdr to get the path of objects.

Mon Mar 31 23:57:45 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/readline/extconf.rb: fix typo, `$defs` not `$DEFS`.
	  [ruby-core:61756] [Bug #9578]

Mon Mar 31 17:23:50 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/memory_status.rb: require envutil before accessing EnvUtil
	  module.  reported by ko1 via twitter.

Mon Mar 31 10:28:01 2014  Eric Wong  <e@80x24.org>

	* st.c (st_init_table_with_size): update comment
	  [Feature #9425]

Sun Mar 30 23:39:26 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_accept, open_ifs_socket, socketpair_internal):
	  reset inherit flag of socket to avoid unintentional inheritance of
	  socket.  note that the return value of SetHandleInformation() is not
	  verified intentionally because old Windows may return an error.
	  [Bug #9688] [ruby-core:61754]
